Update to java 16